<resources>
    <string name="app_name">StudyTime</string>
    <string name="main_text_button">Go to dashboard</string>
    <string name="dashboard_title">Inicio</string>
    <string name="search">Buscar objetivo</string>
    <string name="gotham_medium_32">32pt</string>
    <string name="gotham_medium_24">24pt</string>
    <string name="gotham_book_18">18pt</string>
    <string name="gotham_book_16">16pt</string>
    <string name="gotham_book_14">14pt</string>
    <string name="gotham_book_12">12pt</string>
    <string name="fab_content_desc">Crear objetivo</string>
    <string name="cancel_message">¿Desea cancelar su siguiente sesión? si cancela la sesión puede retomar su rutina al siguiente día programado</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="create_objective_title">Crear Objetivo</string>
    <string name="create_routine_title">Crear rutina</string>
    <string name="create_choose_study_time">Selecciona tiempo de estudio por rutina</string>
    <string name="label_study_time">Tiempo estudio</string>
    <string name="unit">Unidad</string>
    <string name="rest_time_title">Tiempo de descanso</string>
    <string name="preview">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="cancel">Cancelar</string>
    <string name="alarm_configuration_title">Configurar alarma</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresaEmail">Ingresa tu email</string>
    <string name="ingresaContrasena">Ingresa tu contraseña</string>
    <string name="olvidasteContrasena">Olvidaste tu contraseña?</string>
    <string name="iniciar">INICIAR</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registroTitle">Registro</string>
    <string name="registerSubtitle">Ingresa tus datos para completar tu registro</string>
    <string name="loadImage">Cargar foto</string>
    <string name="nameTitle">Nombre</string>
    <string name="nameHelp">Ingresa tu nombre completo</string>
    <string name="repeatPassword">Repite tu contraseña</string>
    <string name="repeatPasswordHelp">Vuelve a ingresar tu contraseña</string>
    <string name="cancelRegister">Cancelar</string>
    <string name="completeRegister">Crear cuenta</string>
    <string name="defineObjetiveTitle">Definir objetivo</string>
    <string name="objetiveNameHint">Dale un nombre a tu objetivo</string>
    <string name="objetiveCategoryHint">Categoría</string>
    <string name="objetiveDescriptionHint">Describe tu objetivo</string>
    <string name="dialogClose">Cerrar</string>
    <string name="start_date_input">Fecha Inicio</string>
    <string name="days">Días:</string>
    <string name="end_date_input">Fecha Fin</string>
    <string name="start_time">Hora Inicio</string>
    <string name="end_time">Hora Fin</string>
    <string name="finish">Finalizar</string>
    <string name="ok">Entendido</string>
</resources>