<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    tools:context="com.androidvynils.studytimeapp.ui.RegisterActivity"
    android:background="@drawable/background_with_texture">




    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pale_olive_green_85"
        android:paddingTop="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pale_olive_green_85"
            android:elevation="4dp"
            app:navigationIcon="@drawable/navigate_before"
            app:title="@string/registroTitle"
            app:titleTextColor="@color/charcoal_black">

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logostudytime"
                android:translationX="170dp" />
        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="90dp"
        android:elevation="8dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/registerSubtitle">

        </TextView>
        <ImageView
            android:id="@+id/imgbtnupload"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/imgbtn"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/pale_olive_green_45"
            android:textColor="@color/white"
            android:text="@string/loadImage"
            android:layout_gravity="center"
            app:rippleColor="@color/pale_olive_green_85"
            style="?attr/borderlessButtonStyle"
            android:layout_marginTop="5dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:helperTextEnabled="true"
            app:helperText="@string/nameHelp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameTitle">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:helperTextEnabled="true"
            app:helperText="@string/ingresaEmail">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconContentDescription="Show"
            app:endIconDrawable="@drawable/show"
            app:helperTextEnabled="true"
            app:helperText="@string/ingresaContrasena">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdRepeatText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:hintAnimationEnabled="false"
            app:hintEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:endIconMode="password_toggle"
            app:endIconContentDescription="Show"
            app:endIconDrawable="@drawable/show"
            app:helperTextEnabled="true"
            app:helperText="@string/repeatPasswordHelp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeatPasswordHelp"
                android:inputType="textPassword">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="18dp"
            android:layout_gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelRegister"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:textColor="@color/coral_pink_75"

                app:strokeColor="@color/coral_pink_75"
                app:strokeWidth="2dp"
                style="?attr/borderlessButtonStyle"
                app:rippleColor="@color/coral_pink_75"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pale_olive_green_45"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/completeRegister"
                android:layout_gravity="right"
                app:rippleColor="@color/pale_olive_green_85"
                style="?attr/borderlessButtonStyle"
                android:layout_marginTop="20dp"/>





        </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>